<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Push</string>
    <string name="action_settings">Settings</string>
    <string name="devicename">Devicename</string>
    <string name="user_key">User Key</string>
    <string name="vibrate">Vibrate</string>
    <string name="play_sound">Play Sound</string>
    <string name="notify">Notify</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="date">Date</string>
    <string name="add_items">Add Items</string>
    <string name="server_url">Server-URL</string>
    <string name="reregister">Re-Register</string>
    <string name="refresh">Refresh</string>
    <string name="clear_list">Clear List</string>
    <string name="settings_notification">Notification Settings</string>
    <string name="settings_api">API Settings</string>
    <string name="setting_key_server_url">server_url</string>
    <string name="setting_key_devicename">devicename</string>
    <string name="setting_key_user_key">user_key</string>
    <string name="setting_key_notify">notify</string>
    <string name="setting_key_sound">play_sound</string>
    <string name="setting_key_vibrate">vibrate</string>
    <string name="unregister">Unregister</string>
    <string name="bacon_ipsum">Bacon ipsum dolor sit amet pork loin doner salami, venison tri-tip shank jowl spare ribs brisket jerky short ribs meatball pig. T-bone cow jowl strip steak swine tail pork chop turducken pig spare ribs shankle boudin shoulder. Fatback t-bone ham hock doner turkey hamburger spare ribs leberkas beef jowl pork chop ball tip strip steak ham swine. Strip steak venison shoulder frankfurter swine. Ground round chicken jowl ribeye chuck, leberkas pork kevin pastrami rump jerky capicola. Beef ribs chicken strip steak, sirloin tongue salami rump cow venison hamburger t-bone chuck ribeye. Corned beef swine tenderloin, spare ribs chicken strip steak biltong.</string>
    <string name="example_date">Mo 28. Apr 00:20:32 CEST 2014</string>
    <string name="open_url">Open Link</string>

</resources>
