<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_update"
        app:showAsAction="always"
        android:title="@string/refresh"
        android:icon="@drawable/ic_cached_white_36dp"/>

    <item
        android:id="@+id/action_settings"
        app:showAsAction="always"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_36dp"/>

    <item
        android:id="@+id/action_add_item"
        app:showAsAction="ifRoom"
        android:title="@string/add_items"
        android:icon="@drawable/ic_add_white_36dp"/>

    <item
        android:id="@+id/action_reregister"
        app:showAsAction="ifRoom"
        android:title="@string/reregister"/>

    <item
        android:id="@+id/action_clear"
        app:showAsAction="ifRoom"
        android:title="@string/clear_list"
        android:icon="@android:drawable/ic_menu_delete"/>

    <item
        android:id="@+id/action_unregister"
        android:title="@string/unregister"/>

</menu>
